Ajustando layouts de validação do cliente

--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Home/Index.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <div class="container">
-        <h4>Administração do Site Ar Desing Forminhas</h4>
+        <h4>Administração do Site AR Desing Forminhas</h4>
         <p>
             Esta é uma área onde gerenciamos o conteúdo total do website. Ele inclui cadastros de banner da home,
             categoria de produtos e novos produtos.
