--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Shared/_LayoutCadastro.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Shared/_LayoutCadastro.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Administração -  @ViewBag.Title - Ar Desing Forminhas</title>
+    <title>Administração -  @ViewBag.Title - AR Desing Forminhas</title>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -25,7 +25,7 @@
         <div class="container">
             <a href='@Url.Action("Index", "Home")' class="navbar-brand">
                 <img src="~/Content/Imagens/Logo_SemFundo.png" width="70" height="40" />
-                Ar Desing Forminhas
+                AR Desing Forminhas
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -45,7 +45,7 @@
     </div>
     <hr />
     <footer>
-        <p>&copy; @DateTime.Now.Year - Ar Desing Forminhas</p>
+        <p>&copy; @DateTime.Now.Year - AR Desing Forminhas</p>
     </footer>
 </body>
 </html>
