--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Home/About.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Home/About.cshtml
@@ -1,7 +1,39 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Quem Somos";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+
+<section class="py-6 py-12">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h2 class="mb-10 text-center">Sobre a AR Desing Forminhas</h2>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="col-md-12">
+                <p style="text-decoration:underline; font-weight:bold">
+                    Quem somos:
+                </p>
+                <p>
+                    Há 14 anos no mercado executando um trabalho diferenciado, a AR Design Forminhas tem o objetivo de abrilhantar os momentos mais especiais da vida dos seus clientes com suas lindas forminhas. A empresa trabalha com muito carinho, tomando todos os cuidados necessários para que tudo esteja de acordo com os seus sonhos!
+                </p>
+
+                <p style="text-decoration:underline; font-weight:bold">
+                    Descrição dos produtos
+                </p>
+                <p>
+                    Suas forminhas são feitas de maneira artesanal e com material de altíssima qualidade, sempre respeitando a personalidade do casal. Dispõe de uma grande variedade de modelos, de diversos tamanhos e cores. Também trabalha com porta guardanapos e apliques para embalagem.
+                </p>
+                <p style="text-decoration:underline; font-weight:bold">
+                    Área de atuação
+                </p>
+                <p>
+                    A AR Design Forminhas está localizada na cidade de Belo Horizonte, no estado de Minas Gerais e realiza envios a todo o território nacional.
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
