--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_Layout.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Ar Desing Forminhas</title>
+    <title>@ViewBag.Title - AR Desing Forminhas</title>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/sweetalert")
@@ -44,7 +44,7 @@
             <!-- Brand -->
             <a href='@Url.Action("Index", "Home")' class="navbar-brand d-xl-none">
                 <img src="~/Content/Imagens/Logo_SemFundo.png" width="70" height="40" />
-                Ar Desing Forminhas
+                AR Desing Forminhas
             </a>
             <!-- Toggler -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,8 +55,15 @@
                 </ul>
                 <a href='@Url.Action("Index", "Home")' class="navbar-brand mx-auto d-none d-xl-block">
                     <img src="~/Content/Imagens/Logo_SemFundo.png" width="70" height="40" />
-                    Ar Desing Forminhas
+                    AR Desing Forminhas
                 </a>
+                <ul class="navbar-nav">
+                    <li class="nav-item p-2">
+                        <a class="menu" href="@Url.Action("About", "Home")">
+                            Quem somos
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </nav>
@@ -71,7 +78,7 @@
                         <!-- Heading -->
                         <h4 class="tituloIconSocial text-white">
                             <img src="~/Content/Imagens/Logo_SemFundo.png" width="70" height="40" />
-                            Ar Desing Forminhas
+                            AR Desing Forminhas
                         </h4>
 
                         <h6 style="color:white">Visite nossas redes sociais</h6>
@@ -84,24 +91,14 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!" class="iconSocial">
-                                    <i class="fab fa-youtube"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!" class="iconSocial">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!" class="iconSocial">
+                                <a href="https://www.instagram.com/ardesignforminhas/" class="iconSocial">
                                     <i class="fab fa-instagram"></i>
                                 </a>
                             </li>
 
                             <li class="list-inline-item">
-                                <a href="#!" class="iconSocial">
-                                    <i class="fab fa-medium"></i>
+                                <a href="https://api.whatsapp.com/send?1=pt_BR&phone=5531991344663&text=Seja%20bem%20vindos%20a%20AR%20Design%20Forminhas.%20Agradecemos%20seu%20contato.%20Em%20breve%20iremos%20lhe%20atender." class="iconSocial">
+                                    <i class="fab fa-whatsapp"></i>
                                 </a>
                             </li>
 
@@ -126,7 +123,7 @@
         <div style="height:30px">
             <div class="container">
                 <div class="row">
-                    <p class="mb-3 mb-md-0 font-size-xxs text-muted">&copy; @DateTime.Now.Year - Ar Desing Forminhas</p>
+                    <p class="mb-3 mb-md-0 font-size-xxs text-muted">&copy; @DateTime.Now.Year - AR Desing Forminhas</p>
                 </div>
             </div>
         </div>
