--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Shared/_LayoutCadastro.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Shared/_LayoutCadastro.cshtml
@@ -36,6 +36,7 @@
                     <li class="p-2">@Html.ActionLink("Categoria", "Index", "Categoria", null, new { @class = "link" })</li>
                     <li class="p-2">@Html.ActionLink("Produto", "Index", "Produto", null, new { @class = "link" })</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </nav>
