--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Account/Login.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Account/Login.cshtml
@@ -1,17 +1,17 @@
 ﻿@using ArDesignForminhas_Web.Models
 @model LoginViewModel
 @{
-    ViewBag.Title = "Logon";
+    ViewBag.Title = "Login";
+    Layout = "~/Areas/Administracao/Views/Shared/_LayoutCadastro.cshtml";
 }
 
-<h2>@ViewBag.Title.</h2>
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Use uma conta local para fazer o logon.</h4>
+                <h4>Informe sua conta para fazer o logon.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -38,23 +38,19 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Logon" class="btn btn-default" />
+                        <input type="submit" value="Entrar" class="btn btn-primary" />
                     </div>
                 </div>
-                <p>
-                    @Html.ActionLink("Registre-se como um novo usuário", "Register")
-                </p>
-                @* Habilite quando a confirmação da conta estiver ativada para a funcionalidade de redefinição de senha
+                <!--
                     <p>
-                        @Html.ActionLink("Esqueceu sua senha?", "ForgotPassword")
-                    </p>*@
+                        @Html.ActionLink("Registre-se como um novo usuário", "Register")
+                    </p>
+                -->
             }
         </section>
     </div>
     <div class="col-md-4">
-        <section id="socialLoginForm">
-            @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
-        </section>
+        &nbsp;
     </div>
 </div>
 
