Ajuste de endereço e rede social

--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_Layout.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_Layout.cshtml
@@ -86,7 +86,7 @@
                         <!-- Social -->
                         <ul class="list-unstyled list-inline mb-7 mb-md-0">
                             <li class="list-inline-item">
-                                <a href="#!" class="iconSocial">
+                                <a href="https://www.facebook.com/ardesignforminhas2020" class="iconSocial">
                                     <i class="fab fa-facebook-f"></i>
                                 </a>
                             </li>
@@ -107,9 +107,9 @@
                     <div class="col-12 col-sm mt-4">
                         <h6 style="color:white">
                             <p>Nosso endereço:</p>
-                            <p>R. Princesa Elizabeth, 240</p>
-                            <p>Loja 4 - Parque Pedro II</p>
-                            <p>Belo Horizonte - MG, 30775-220</p>
+                            <p>R. Francisco Manoel da Silva, 58</p>
+                            <p>Estrela Dalva</p>
+                            <p>Belo Horizonte - MG, 30570-500</p>
                         </h6>
                     </div>
                     <div class="col-12 col-sm mt-4">
